Fix assertion failure when the network process is enabled https://bugs.webkit.org/show_bug.cgi?id=105040 <rdar://problem/12883632>

Reviewed by Alexey Proskuryakov.

Make sure that we don't call into the download manager when running with a network process.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::shouldTerminate):

Canonical link: https://commits.webkit.org/123276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137755 268f45cc-cd09-0410-ab3c-d52691b4dbfc